# redis-test

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
redis_test/: consumer.py  defect.py  producer.py
tests/: test_redis_test.py
