[tool.poetry]
name = "redis-test"
version = "0.1.0"
description = ""
authors = ["Dozer74 <ev.gorvits@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
aioredis = "^1.3.1"
loguru = "^0.5.3"
click = "^8.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
